# cinema_expert_ai_agent

./: .env.example  README.md  pyproject.toml  settings.toml
src/: __init__.py  agent.py  api.py  config.py  llm.py  main.py  memory.py  tools.py
